Bug 1628033 - Add pid to the socket process in about:memory. r=valentin,necko-reviewers

This is modelled on the corresponding code in
`RDDParent::RecvRequestMemoryReport()`.

Also rename it `Socket` to match other content processes like `GPU` and `RDD`.

Differential Revision: https://phabricator.services.mozilla.com/D72995